--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,18 @@
 --- #YAML:1.0
 name:                Net-SFTP-SftpServer
-version:             1.0.2
-abstract:            ~
+version:             1.0.4
+abstract:            Secure File Transfer Protocol Server
 license:             ~
-author:              ~
+author:              
+    - Simon Day <cpan@simonday.info>
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
+    Errno:                         0
+    Fcntl:                         0
+    POSIX:                         0
+    Stat::lsMode:                  0
+    Sys::Syslog:                   0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
